--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-counter></app-counter>
-<app-heroes-list></app-heroes-list>
+<!-- <app-counter></app-counter>
+<app-heroes-list></app-heroes-list> -->
+<app-dbz-main-page></app-dbz-main-page>
